added showcase css styling

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,10 @@
 body {
     font-family: 'IM Fell French Canon', serif;
 }
+
+#showcase {
+    background-image: url(./Images/Images/header.jpg);
+    height: 95vh;
+    background-size: cover;
+    background-position: center;
+}
