--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,21 @@ body {
     background-size: cover;
     background-position: center;
 }
+
+/* Media Query */
+
+@media (min-width:992px){
+    .card-text {
+        height: 110px;
+    }
+}
+@media (min-width:1200px){
+    .card-text {
+        height: 90px;
+    }
+}
+@media (min-width:1400px){
+    .card-text {
+        height: 70px;
+    }
+}
